# kaleidoscope

./: .gitignore  Cargo.toml  justfile
programs/: draft.kal  varin.kal
src/: cli.rs  compiler.rs  lib.rs  types.rs
